--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ dist-ssr
 
 .env
 
+
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -24,3 +26,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+frontend/src/lib/axios.js
